--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
         <body>
             <div id="nav">
                 <span>For Real Finances</span>
-                <a class="contact" href="#">Contact</a>
-                <a href="#">Pricing</a>
-                <a href="#">Product</a>
+            <div>
                 <a href="#">Home</a>
+                <a href="#">Product</a>
+                <a href="#">Pricing</a>
+                <a href="#">Contact</a>
+            </div>
             </div>
             <div id="ultimate">
                 <div id="boxContainer">
